--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <activity android:name=".CreateAccountActivity" android:theme="@style/AppTheme" />
+        <activity android:name=".LocationActivity" android:theme="@style/AppTheme" />
         <activity android:name=".LoginActivity" android:theme="@style/AppTheme" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </application>
