--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aleckeller.deliverit">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:name=".AppController"
         android:allowBackup="true"
@@ -24,6 +25,9 @@
         <activity android:name=".LocationActivity" android:theme="@style/AppTheme" />
         <activity android:name=".LoginActivity" android:theme="@style/AppTheme" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA8aV7sq5VcYhENZZd0-kJxnEMpr1ItlF0"/>
+
     </application>
 
 </manifest>
