--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".CreateAccountActivity" android:theme="@style/AppTheme" />
         <activity android:name=".LocationActivity" android:theme="@style/AppTheme" />
         <activity android:name=".LoginActivity" android:theme="@style/AppTheme" />
+        <service android:name=".FetchAddressIntentService" android:exported="false" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA8aV7sq5VcYhENZZd0-kJxnEMpr1ItlF0"/>
