--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".FirebaseNotificationSystem">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
         <activity android:name=".SpecialRequestActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".CheckoutActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".CreateAccountActivity" android:theme="@style/AppTheme" />
