--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".OrderNotificationActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".SpecialRequestActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".CheckoutActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".CreateAccountActivity" android:theme="@style/AppTheme" />
